--- a/index.html
+++ b/index.html
@@ -4,13 +4,167 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Coffee Shop</title>
-        <meta name="description" content="Cafetería">
+        <meta name="description" content="Cafetería en Montevideo-Uruguay">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/main.css">
+        <!--link rel="stylesheet" href="css/main.css"-->
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    
+
+        <header>
+            <h1>Coffee Shop</h1>
+                <nav>
+                    <h1 class="hidden">Navigation</h1>
+                     <ul>
+                        <li><a href="#menu">Menú</a></li>
+                        <li><a href="#delivery">Delivery</a></li>
+                        <li><a href="index-2.html">Recetas</a></li>    
+                    </ul>
+                </nav>    
+        </header>
+
+        <section id="menu">
+            <h2>Menú</h2>
+            <table>
+                <tr>
+                  <th>Café</th>
+                </tr>
+                <tr>
+                  <td>Espresso</td>
+                  <td>$45</td>
+                </tr>
+                <tr>
+                    <td>Macchiato</td>
+                    <td>$45</td>
+                </tr>
+                <tr>
+                  <td>Largo</td>
+                  <td>$55</td>
+                </tr>
+                <tr>
+                    <td>Macchiato</td>
+                    <td>$45</td>
+                </tr>
+                <tr>
+                  <td>Largo</td>
+                  <td>$55</td>
+                </tr>
+                <tr>
+                    <td>Doble</td>
+                    <td>$60</td>
+                </tr>
+                 <tr>
+                  <td>Frapucchino</td>
+                  <td>$85</td>
+                </tr>
+                <tr>
+                    <td>Latte</td>
+                    <td>$65</td>
+                </tr>
+                <tr>
+                  <th>Té</th>
+                </tr>
+                <tr>
+                  <td>Común</td>
+                  <td>$45</td>
+                </tr>
+                <tr>
+                    <td>Herbal</td>
+                    <td>$60</td>
+                </tr>
+                <tr>
+                    <th>Drinks</th>
+                </tr>
+                <tr>
+                    <td>Licuados (2 frutas + agua o leche)</td>
+                    <td>$65</td>
+                </tr>
+                <tr>
+                    <td>Refrescos</td>
+                    <td>$50</td>
+                </tr>
+                <tr>
+                  <td>Limonada</td>
+                  <td>$45</td>
+                </tr>
+                <tr>
+                    <td>Jugo de natural de naranja</td>
+                    <td>$45</td>
+                </tr>
+                 <tr>
+                    <th>Para comer</th>
+                </tr>
+                <tr>
+                    <td>Sandwich en pan francés</td>
+                    <td>$130</td>
+                </tr>
+                <tr>
+                    <td>Tostados</td>
+                    <td>$90</td>
+                </tr>
+                <tr>
+                    <td>Medialuna rellena de J&Q</td>
+                    <td>$65</td>
+                </tr>
+                <tr>
+                    <td>Bagles con queso crema</td>
+                    <td>$85</td>
+                </tr>
+                <tr>
+                  <td>Ensalada azul</td>
+                  <td>$130</td>
+                </tr>
+                <tr>
+                    <td>Burritos</td>
+                    <td>$120</td>
+                </tr>
+                <tr>
+                    <th>Cosas dulces</th>
+                </tr>
+                <tr>
+                    <td>Muffins</td>
+                    <td>$30</td>
+                </tr>
+                <tr>
+                    <td>Cookies</td>
+                    <td>$25</td>
+                </tr>
+                <tr>
+                    <td>Brownies</td>
+                    <td>$45</td>
+                </tr>
+                <tr>
+                    <td>Apple pie</td>
+                    <td>$55</td>
+                </tr>
+                <tr>
+                  <td>Corissant de almendras</td>
+                  <td>$65</td>
+                </tr>
+                <tr>
+                    <td>Granola con fruta</td>
+                    <td>$120</td>
+                </tr>
+            </table>
+        </section>
+
+        <section id="delivery">
+            <h2>Delivery</h2>
+            <ul>
+                <li>
+                    <h3>Horarios</h3>
+                    <p>Lunes a Viernes de 10:30 a 20:00 Hs</p>
+                </li>
+                <li>
+                    <p>0800 COFFEE</p>
+                </li>
+            </ul>
+
+
+
+
+    </body>
+</html>
 
