Modificación en table, agrego estilos al hedaer, agrego fuente a body

--- a/index-2.html
+++ b/index-2.html
@@ -13,4 +13,35 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
     </body>
+
+    <section id="recetas">
+        <ul>
+            <li>
+                <h1>Apple Pie</h1>
+            </li>
+            <li>
+                <h2>Ingredientes de la Masa:</h2>
+                <p>400gr de harina</p>
+                <p>225gr de manteca</p>
+                <p>1cda de azúcar</p>
+                <p>4cda de agua fría</p>
+                <p>1 pizca de sal</p>
+                <h2>Ingredientes del Relleno:</h2>
+                <p>4 manzanas</p>
+                <p>90gr de azúcar rubia</p>
+                <p>1cda de harina</p>
+                <p>1cda de canela</p>
+                <p>1 pizca de nuez moscada</p>
+                <h2>Preparación:</h2>
+                <p>En un bol colocar la harina, la manteca cortada en cubos, la sal y el agua fría (no demasiada). Con la punta de los dedos ir desarmando la manteca mientras se va formando la masa. La masa tiene que ser blanda al tacto. Dejar reposar. Espolvorear la masa apenas con un poco con harina y estirarla con el palo de amasar. Cortar un poco de la masa y reservar para hacer la cubierta. En un molde limpio, sin nada de manteca, extender la masa cubriendo bien los bordes. En un bol colocar las manzanas verdes cortadas en cubitos, la fécula de maíz, el azúcar, una pizca de canela en polvo. Mezclar. Colocar el relleno dentro del molde cubierto con la masa. Estirar la masa de la cubierta hasta que quede bien fina y cubrir con ella la tarta. Hacer el repulgue para cerrar. Pincelar con manteca derretida y espolvorear con azúcar. Cocción: En horno precalentado moderado (para que la torta se cocine en forma pareja y quede dorada) durante 50 minutos aproximadamente. Servir acompañada con una crema chantilly preparada de la siguiente manera: En un bol colocar la crema semibatida, el azúcar impalpable y un chorrito de esencia de vainilla. Batir con el batidor de mano.
+                </p>
+
+
+
+
+        </ul>
+
+
+
+    </section>
     
