--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <title>Coffee Shop</title>
         <meta name="description" content="Cafetería en Montevideo-Uruguay">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!--link rel="stylesheet" href="css/main.css"-->
+        <link rel="stylesheet" href="css/main.css">
+        <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -29,49 +30,71 @@
             <h2>Menú</h2>
             <table>
                 <tr>
-                  <th>Café</th>
+                    <td class="hidden">Opciones de menú</td>
+                    <td class="hidden">Precios</td>
                 </tr>
                 <tr>
-                  <td>Espresso</td>
-                  <td>$45</td>
+                    <th>Café</th>
                 </tr>
                 <tr>
-                    <td>Macchiato</td>
+                    <td>Espresso</td>
                     <td>$45</td>
                 </tr>
                 <tr>
-                  <td>Largo</td>
-                  <td>$55</td>
+                    <td>Macchiato</td>
                 </tr>
                 <tr>
-                    <td>Macchiato</td>
                     <td>$45</td>
                 </tr>
                 <tr>
-                  <td>Largo</td>
-                  <td>$55</td>
+                   <td>Largo</td>
+                </tr>
+                <tr>
+                   <td>$55</td>
+                </tr>
+                <tr>
+                    <td>Macchiato</td>
+                </tr>
+                <tr>
+                    <td>$45</td>
+                </tr>
+                <tr>
+                    <td>Largo</td>
+                </tr>
+                <tr>
+                    <td>$55</td>
                 </tr>
                 <tr>
                     <td>Doble</td>
+                </tr>
+                <tr>
                     <td>$60</td>
                 </tr>
-                 <tr>
-                  <td>Frapucchino</td>
-                  <td>$85</td>
+                <tr>
+                    <td>Frapucchino</td>
+                </tr>
+                <tr>
+                    <td>$85</td>
                 </tr>
                 <tr>
                     <td>Latte</td>
+                </tr>
+                <tr>
                     <td>$65</td>
                 </tr>
                 <tr>
                   <th>Té</th>
                 </tr>
                 <tr>
-                  <td>Común</td>
-                  <td>$45</td>
+                    <td>Común</td>
+                </tr>
+                <tr>
+                    <td>$45</td>
                 </tr>
                 <tr>
                     <td>Herbal</td>
+                </tr>
+                <tr>
                     <td>$60</td>
                 </tr>
                 <tr>
@@ -79,45 +102,63 @@
                 </tr>
                 <tr>
                     <td>Licuados (2 frutas + agua o leche)</td>
+                </tr>
+                <tr>
                     <td>$65</td>
                 </tr>
                 <tr>
-                    <td>Refrescos</td>
+                    <th>Refrescos</th>
+                </tr>
+                <tr>
                     <td>$50</td>
                 </tr>
                 <tr>
-                  <td>Limonada</td>
-                  <td>$45</td>
+                    <td>Limonada</td>
+                </tr>
+                <tr>
+                    <td>$45</td>
                 </tr>
                 <tr>
                     <td>Jugo de natural de naranja</td>
+                <tr>
                     <td>$45</td>
                 </tr>
-                 <tr>
+                <tr>
                     <th>Para comer</th>
                 </tr>
                 <tr>
                     <td>Sandwich en pan francés</td>
+                <tr>
                     <td>$130</td>
                 </tr>
                 <tr>
                     <td>Tostados</td>
+                </tr>
+                <tr>
                     <td>$90</td>
                 </tr>
                 <tr>
-                    <td>Medialuna rellena de J&Q</td>
+                    <td>Medialuna rellena de J&ampQ</td>
+                </tr>
+                <tr>
                     <td>$65</td>
                 </tr>
                 <tr>
                     <td>Bagles con queso crema</td>
+                </tr>
+                <tr>
                     <td>$85</td>
                 </tr>
                 <tr>
-                  <td>Ensalada azul</td>
-                  <td>$130</td>
+                    <td>Ensalada azul</td>
+                </tr>
+                <tr>
+                    <td>$130</td>
                 </tr>
                 <tr>
                     <td>Burritos</td>
+                </tr>
+                <tr>
                     <td>$120</td>
                 </tr>
                 <tr>
@@ -125,28 +166,40 @@
                 </tr>
                 <tr>
                     <td>Muffins</td>
+                </tr>
+                <tr>
                     <td>$30</td>
                 </tr>
                 <tr>
                     <td>Cookies</td>
+                </tr>
+                <tr>
                     <td>$25</td>
                 </tr>
                 <tr>
                     <td>Brownies</td>
+                </tr>
+                <tr>
                     <td>$45</td>
                 </tr>
                 <tr>
                     <td>Apple pie</td>
+                </tr>
+                <tr>
                     <td>$55</td>
                 </tr>
                 <tr>
-                  <td>Corissant de almendras</td>
-                  <td>$65</td>
+                    <td>Corissant de almendras</td>
+                </tr>
+                <tr>
+                    <td>$65</td>
                 </tr>
                 <tr>
                     <td>Granola con fruta</td>
-                    <td>$120</td>
                 </tr>
+                <tr>
+                    <td>$120</td>
+                </tr-->
             </table>
         </section>
 
@@ -161,6 +214,7 @@
                     <p>0800 COFFEE</p>
                 </li>
             </ul>
+        </section>
 
 
 
