En header agrego logo y background

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <![endif]-->
 
         <header>
-            <h1>Coffee Shop</h1>
-                <nav>
+                <nav class="main-header">
+                    <img src="images/logo.png" alt="Logo gpm">
                     <h1 class="hidden">Navigation</h1>
-                     <ul>
+                    <ul>
                         <li><a href="#menu">Menú</a></li>
                         <li><a href="#delivery">Delivery</a></li>
                         <li><a href="index-2.html">Recetas</a></li>    
